style.css
.title {
    text-align: center;
}

.book-message {
    text-align: center;
    background-color: rgba(253, 111, 16, 0.247);
}

button {
    border: none;
    border-radius: 6px;
    background-color: rgb(255, 192, 111);
    width: 150px;
    height: 30px;
    font-weight: bold;

    box-shadow: 0px 0px 1px 1px rgb(228, 164, 81);
    background-color: #FBAB7E;
    background-image: linear-gradient(180deg, #FBAB7E 3%, #F7CE68 22%, #ffffff 100%);
}

button:hover {
    box-shadow: 0px 0px 8px 3px rgb(255, 192, 111);
}

div.button {
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
}

form {
    padding-top: 2rem;
    border-bottom: 1px solid rgb(255, 192, 111);
    height: 300px;
    /* width: 400px; */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;

    justify-items: center;
}

form > div {
    /* border: 1px solid red; */
    width: 600px;
    /* height: 40px; */
    display: flex;
    justify-content: center;
    /* align-items: flex-start; */
    gap: 20px;
}

input {
    width: 400px;
    height: 30px;
    border-radius: 8px;
    border: none;
    outline: 1px solid rgb(255, 196, 0);
    padding: 0px 8px;
    
    /* border: 2px solid blue; */
}

input:focus {
    box-shadow: 0px 0px 6px 4px rgb(228, 164, 81);
}

label {
    width: 150px;
    /* border: 1px solid blue; */
}

#radio label {
    width: 80px;
}

#radio input {
    width: 20px;
    outline: none;
}

.main-container {
    padding: 3rem;
    
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    justify-items: center;
    gap: 2rem;
}

.book-card, .static-card {
    padding-top: 1rem;
    width: 250px;
    height: 250px;
    /* border: 1px solid black; */
    text-align: center;
    border-radius: 8px;
    box-shadow: 0px 0px 8px 1px rgb(201, 201, 201);

    position: relative; /* for close button placement */

    background-color: #FBAB7E;
    background-image: linear-gradient(180deg, #FBAB7E 3%, #F7CE68 22%, #ffffff 100%);
}

.book-card:hover, .static-card:hover {
    box-shadow: 0px 0px 8px 3px rgb(255, 192, 111);
}

.static-card:hover  .close-icon, .book-card:hover .close-icon {
    display:block;
}

.close-icon {
    /* border: 1px solid black; */
    width: 16px;
    position: absolute;
    right: 8px;
    top: 8px;
    display: none;
    border-radius: 50%;
    border: 1px solid black;
}

.close-icon:hover {
    border: 2px solid red;
}

